# nscale

./: .gitignore  .traefik.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.e2e  Dockerfile.release  LICENSE  LOCAL_TESTING.md  README.md  RELEASE.md  RELEASE_QUICK.md  build-release.sh  docker-compose.e2e.yml  plugins-local  run-docker-e2e.sh  run-e2e-tests.sh
.github/workflows/: release.yml
activator/: main.go  main_test.go  runtime.go  runtime_test.go  store.go
activity-store/: README.md  consul.go  go.mod  go.sum  redis.go  redis_jobspec.go  store.go
charts/nscale/: .helmignore  Chart.yaml  README.md  values.yaml
charts/nscale/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  etcd-service.yaml  etcd-statefulset.yaml  redis-configmap.yaml  redis-deployment.yaml  redis-pvc.yaml  redis-service.yaml  secret.yaml  service-admin.yaml  service-proxy.yaml  serviceaccount.yaml
config/: default.toml
crates/nscale-consul/: Cargo.toml
crates/nscale-consul/src/: catalog.rs  client.rs  lib.rs  traits_impl.rs
crates/nscale-core/: Cargo.toml
crates/nscale-core/src/: config.rs  lib.rs  traits.rs
crates/nscale-etcd/: Cargo.toml
crates/nscale-etcd/src/: client.rs
crates/nscale-nomad/: Cargo.toml
crates/nscale-nomad/src/: client.rs  job_mutator.rs  lib.rs  models.rs
crates/nscale-proxy/: Cargo.toml
crates/nscale-proxy/src/: handler.rs  lib.rs  middleware.rs
crates/nscale-scaler/: Cargo.toml
crates/nscale-scaler/src/: controller.rs  traffic_probe.rs
crates/nscale-store/: Cargo.toml
crates/nscale-store/src/: activity.rs  auto_deregister.rs  lib.rs  lock.rs  registry.rs
crates/nscale-waker/: Cargo.toml
crates/nscale-waker/src/: coordinator.rs  state.rs
docs/: README.md  durable-registry.md  job-submission.md  performance-configuration.md
e2e/k6/: rolling.js  storm.js  targets.js  warmup.js
e2e/nomad/jobs/: echo-s2z.nomad.tpl  idle-scaler.nomad.tpl
e2e/nomad/nomad.d/: nomad.hcl
e2e/scripts/: collect-redis-info.sh  evaluate-release-gates.sh  render-idle-scaler-job.sh  render-workload-jobs.sh  run-k6-scenario.sh  wait-for-consul-services.sh  wait-for-http.sh  wait-for-nomad-job.sh  wait-for-nomad-running-count.sh
e2e/traefik/: dynamic.yml  traefik.yml
idle-scaler/: README.md  go.mod  go.sum  main.go  main_test.go
idle-scaler/cmd/e2e-echo/: main.go  main_test.go
integration/: docker-compose.acl.yml  docker-compose.durable.yml  docker-compose.yml  test-acl.sh  test-durable-multi-replica.sh  test-durable.sh  test.sh
integration/acl/: consul.hcl  nomad.hcl
integration/acl/policies/: consul-catalog-read.hcl  consul-nomad-agent.hcl  consul-nscale.hcl  nomad-nscale.hcl
integration/acl/scripts/: bootstrap-consul-acls.sh  bootstrap-env.sh  bootstrap-nomad-acls.sh  start-nomad.sh  start-nscale.sh  start-traefik.sh
integration/acl/templates/: nomad.hcl  traefik.yml
integration/config/: default.toml
integration/jobs/: echo-s2z.nomad  echo-submit.nomad
integration/k6/: endurance.js  long-work.js  storm.js
integration/scripts/: multi-job.sh
integration/traefik/: dynamic.yml  traefik.yml
integration/traefik/certs/: generate.sh  server.crt  server.key
local-test/: docker-compose.yml
local-test/nomad/: consul-catalog-read-policy.hcl  consul.hcl  nomad-agent-consul-policy.hcl  nomad.hcl  scale-to-zero-consul-policy.hcl  scale-to-zero-policy.hcl
local-test/plugins-local/src/nomad_scale_to_zero/: activity-store  traefik-plugin
local-test/sample-jobs/: echo-s2z-vars.hcl  echo-s2z-vars.vars.hcl  echo-s2z.hcl  echo-server.hcl
local-test/scripts/: start-local-with-acl.sh
local-test/system-jobs/: .keep  idle-scaler.hcl
local-test/traefik/: s2z-dynamic.yml
rust/: Cargo.toml  Dockerfile
rust/config/: default.toml
rust/crates/nscale-consul/: Cargo.toml
rust/crates/nscale-consul/src/: health.rs
rust/crates/nscale-core/: Cargo.toml
rust/crates/nscale-core/src/: config.rs  error.rs  job.rs
rust/crates/nscale-nomad/: Cargo.toml
rust/crates/nscale-nomad/src/: client.rs  events.rs  models.rs
rust/crates/nscale-proxy/: Cargo.toml
rust/crates/nscale-proxy/src/: proxy.rs
rust/crates/nscale-scaler/: Cargo.toml
rust/crates/nscale-scaler/src/: lib.rs
rust/crates/nscale-store/: Cargo.toml
rust/crates/nscale-store/src/: lib.rs
rust/crates/nscale-waker/: Cargo.toml
rust/crates/nscale-waker/src/: lib.rs  state.rs
rust/integration/: docker-compose.yml  stress-test.sh  test.sh
rust/integration/k6/: coldstart.js  load.js  multi-service.js  soak.js  targets.js
rust/integration/nomad.d/: config.hcl
rust/integration/scripts/: multi-job.sh
rust/src/: main.rs
src/: main.rs
traefik-plugin/: .traefik.yml  go.mod  go.sum  main.go  main_test.go
