[package]
name = "nscale-core"
version = "2.0.1"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
figment = { workspace = true }
reqwest = { workspace = true }
