[package]
name = "nscale-proxy"
version = "2.2.0"
edition = "2024"

[dependencies]
nscale-core = { path = "../nscale-core" }
nscale-waker = { path = "../nscale-waker" }
nscale-store = { path = "../nscale-store" }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
