[package]
name = "nscale-store"
version = "2.0.0"
edition = "2024"

[dependencies]
nscale-core = { path = "../nscale-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
fred = { workspace = true }

