[package]
name = "nscale-waker"
version = "2.2.0"
edition = "2024"

[dependencies]
nscale-core = { path = "../nscale-core" }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
