[package]
name = "nscale-consul"
version = "0.1.0"
edition = "2021"

[dependencies]
nscale-core = { path = "../nscale-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
