[package]
name = "nscale-scaler"
version = "0.1.0"
edition = "2021"

[dependencies]
nscale-core = { path = "../nscale-core" }
nscale-waker = { path = "../nscale-waker" }
nscale-store = { path = "../nscale-store" }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
